Co-authored-by: wangchangdog <wangchangdog@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <!-- JSXによるReact要素が入る部分 -->
+      
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
